@@ -9,6 +9,8 @@ Changes to Version 2.3-0
   o Added view data dialog, supporting viewing a subset of the active data set, and sort data set dialog (suggestions of Sung-il Cho).
   
   o Added connect option to plot means dialog (suggestion of Graham Smith).
+  
+  o Added Welch F-test option to one-way ANOVA dialog.
 
 
 Changes to Version 2.2-4
